--- a/src/app/admin/features/Bulk_operation/alacarte-activation/alacarte-activation.component.html
+++ b/src/app/admin/features/Bulk_operation/alacarte-activation/alacarte-activation.component.html
@@ -34,7 +34,7 @@
                                 </p>
                             </div>
                         </div>
-                        <a class="mb-3" (click)="generateExcel()" style="cursor: pointer;">* Download Format File</a>
+                        <a class="mb-3" (click)="generateExcel('Alacarte')" style="cursor: pointer;">* Download Format File</a>
                         <div class="checkbox-text mb-3">
                             <div class="checkbox-content">
                                 <input type="checkbox" id="terms" (change)="onCheckboxChange($event)">
