--- a/src/app/admin/features/Bulk_operation/deactivation/deactivation.component.html
+++ b/src/app/admin/features/Bulk_operation/deactivation/deactivation.component.html
@@ -25,7 +25,7 @@
                         </span>
                     </div>
                 </div>
-                <a class="mb-3" (click)="generateExcel()" style="cursor: pointer;">* Download Format File</a>
+                <a class="mb-3" (click)="generateExcel('Deactivation')" style="cursor: pointer;">* Download Format File</a>
                 <div class="checkbox-text mb-3">
                     <div class="checkbox-content">
                         <input type="checkbox" id="terms" formControlName="billingAddressCheckbox"
