--- a/src/app/admin/features/Bulk_operation/subscription-exdend/subscription-exdend.component.html
+++ b/src/app/admin/features/Bulk_operation/subscription-exdend/subscription-exdend.component.html
@@ -26,7 +26,7 @@
                         </span>
                     </div>
                 </div>
-                <a class="mb-3" href="">* Download Format File</a>
+                <a class="mb-3"(click)="generateExcel('Update Subscription')">* Download Format File</a>
                 <div class="checkbox-text mb-3">
                     <div class="checkbox-content">
                         <input type="checkbox" id="terms" formControlName="billingAddressCheckbox"
