--- a/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-edit/channel-edit.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-edit/channel-edit.component.html
@@ -10,7 +10,7 @@
                     <span for="categoryName" class="me-2">Channel Name </span>
                 </div>
                 <div class="col-12 col-md-6">
-                    <input type="text" [(ngModel)]="channel_name" class=" flex-grow-1">
+                    <input type="text" [(ngModel)]="channelname" class=" flex-grow-1">
                 </div>
             </div>
             <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
@@ -68,7 +68,7 @@
                     <span for="productId" class="me-2">Product Id </span>
                 </div>
                 <div class="col-12 col-md-6">
-                    <input type="text" [(ngModel)]="product_id" class=" flex-grow-1">
+                    <input type="text" [(ngModel)]="productid" class=" flex-grow-1">
                 </div>
             </div>
             <div class="input_box col-12 col-md-12 display align-items-center mb-3">
@@ -76,7 +76,7 @@
                     <span for="serviceId" class="me-2">Service Id </span>
                 </div>
                 <div class="col-12 col-md-6 ">
-                    <input type="text" [(ngModel)]="service_id" class=" flex-grow-1">
+                    <input type="text" [(ngModel)]="serviceid" class=" flex-grow-1">
                 </div>
             </div>
             <div class=" col-12 col-md-12 display align-items-center mb-3">
