--- a/src/app/_core/charts/inventory-chart/inventory-chart.component.html
+++ b/src/app/_core/charts/inventory-chart/inventory-chart.component.html
@@ -1,3 +1,4 @@
-<div>
+<!-- <div>
   <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
-</div>  
+</div>   -->
+<div id="inventarychartContainer" style="height: 370px; width: 100%;"></div>
