--- a/src/app/_core/charts/stb-chart/stb-chart.component.html
+++ b/src/app/_core/charts/stb-chart/stb-chart.component.html
@@ -1,3 +1,2 @@
-<div>
-  <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>    
-</div>     
+
+<div id="stbchartContainer" style="height: 370px; width: 100%;"></div>
