--- a/src/app/admin/features/Bulk_operation/activation/activation.component.html
+++ b/src/app/admin/features/Bulk_operation/activation/activation.component.html
@@ -32,7 +32,7 @@
                         </span>
                     </div>
                 </div>
-                <a class="mb-3" (click)="generateExcel()" style="cursor: pointer;">* Download Format File</a>
+                <a class="mb-3" (click)="generateExcel('Activation')" style="cursor: pointer;">* Download Format File</a>
                 <div class="checkbox-text mb-3">
                     <div class="checkbox-content">
                         <input type="checkbox" id="terms" (change)="onCheckboxChange($event)">
