--- a/src/app/admin/features/Bulk_operation/bulk-base-change/bulk-base-change.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-base-change/bulk-base-change.component.html
@@ -27,7 +27,7 @@
                         </span>
                     </div>
                 </div>
-                <a class="mb-3" href="">* Download Format File</a>
+                <a class="mb-3" (click)="generateExcel('Active Base Change')" style="cursor: pointer;">* Download Format File</a>
                 <div class="checkbox-text mb-3">
                     <div class="checkbox-content">
                         <input type="checkbox" id="terms" formControlName="billingAddressCheckbox"
