--- a/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/payment-update/payment-update.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/local+broadcasting/payment-update/payment-update.component.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="line">
+            <div *ngIf="confirmation" class="line">
                 <div class="col-12 d-flex justify-content-center align-items-center">
                     <div class="col-6 d-flex justify-content-start align-items-center">
                         <span>New ExpiryDate</span>
@@ -95,7 +95,7 @@
                         {{confirmationPaymentList?.newexpirydate}} </div>
                 </div>
             </div>
-            <div class="line">
+            <div *ngIf="confirmation" class="line">
                 <div class="col-12 d-flex justify-content-center align-items-center">
                     <div class="col-6 d-flex justify-content-start align-items-center">
                         <span>Days</span>
@@ -108,7 +108,7 @@
         </div>
         <div class="d-flex justify-content-center align-items-center" style="padding: 10px;">
             <button type="button" class="btn btn-success" (click)="confirm()">Confirm </button>
-            <button type="button" class="btn btn-success" (click)="submit()">Submit </button>
+            <button type="button" class="btn btn-success" [disabled]="!confirmationPaymentList" (click)="submit()">Submit </button>
             &nbsp;
             <button type="button" class="btn btn-danger" (click)="onNoClick()">No</button>
         </div>
