--- a/src/app/admin/features/channel_setting/_Dialogue/operator/edit-lco/edit-lco.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/edit-lco/edit-lco.component.html
@@ -1,6 +1,7 @@
 <div class="card">
     <div class="Head d-flex justify-content-between align-items-center mb-3">
         <p class="span">Edit LCO profile</p>
+        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
     </div>
     <form [formGroup]="form" class="mobile" (ngSubmit)="onSubmit()">
         <div class="display justify-content-center align-items-center ">
