--- a/src/styles.scss
+++ b/src/styles.scss
@@ -309,6 +309,10 @@ body {
 .ag-header-cell-text {
     color: white;
 }
+
+.line {
+    border: 1px solid lightgray;
+}
 // ::ng-deep {
 //     .ag-center-cols-viewport {
 //         max-height: 500px;
